
syntax = "proto3";

package raft;

option go_package = "impl-raft-go/proto";

service RaftService {
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
  rpc InstallSnapshot(InstallSnapshotArgs) returns (InstallSnapshotReply);
  rpc HealthCheck(HealthCheckArgs) returns (HealthCheckReply);
}

message RequestVoteArgs {
  int64 term = 1;
  int64 candidateId = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message RequestVoteReply {
  int64 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesArgs {
  int64 term = 1;
  int64 leaderId = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int64 leaderCommit = 6;
}

message AppendEntriesReply {
  int64 term = 1;
  bool success = 2;
  int64 conflictIndex = 3; 
  int64 conflictTerm = 4;
}

message InstallSnapshotArgs {
  int64 term = 1;
  int64 leaderId = 2;
  int64 lastIncludedIndex = 3;
  int64 lastIncludedTerm = 4;
  bytes data = 5; 
}

message InstallSnapshotReply {
  int64 term = 1;
}

message LogEntry {
  int64 term = 1;
  int64 index = 2;
  bytes command = 3; 
}


// for testing purpose
message HealthCheckArgs{
  string ping = 1;
}

message HealthCheckReply{
  string pong = 1;
}